# trip-planner-genai

./: .gitignore  README.md  base_models.py  data.py  llm_client.py  main.py  pyproject.toml  test.ipynb  test_updated.ipynb
app/: .gitignore  pubspec.yaml
app/android/app/: google-services.json
app/lib/: main.dart
app/lib/models/: clarification_response.dart  day_plan.dart  hotel_models.dart  itinerary.dart  place.dart  trip_request.dart
app/lib/screens/: auth_wrapper.dart  chat_screen.dart  explore_screen.dart  flight_booking_screen.dart  saved_trips_screen.dart  storytelling_screen.dart
app/lib/services/: firebase_test.dart  flight_service.dart  (+3 more)
backend/: pyproject.toml  test.ipynb  test2.ipynb
backend/features/emt_plus_payment/: emt_booking.py  emt_service.py
backend/features/iternary_generation/: basic_tag_personalization.py  iternary_generator.py
backend/features/maps_scrapper/: image_scraper.py  scraper.py
backend/features/reddit_scraper/: scraper.py  suggest_subreddits.py  summarizer.py
backend/features/weather/: update_iternary.py
client/: Dockerfile  package.json
client/src/: App.js  firebase.js  tripIternary.json
features/emt_plus_payment/: emt_booking.py  emt_service.py
features/iternary_generation/: basic_visualization_generation.py  iternary_generator.py  llm_parser.py
features/predictive_pipeline/: humanise_iternary.py  place_reviews_builder.py  travel_optimizer.py  weather_optimizer.py
server/: Dockerfile  base_models.py  example_iternary.json  main.py  requirements.txt  test.ipynb  test.py  test2.ipynb  test3.ipynb
(+75 files in other folders)
