[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-cloud-aiplatform>=1.113.0",
    "google-genai>=1.36.0",
    "ipykernel>=6.30.1",
    "praw>=7.8.1",
     "serpapi>=0.1.5",
     "google-search-results>=2.4.2"
]
